--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,22 +18,18 @@
         android:orientation="vertical"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:onClick="@{handler::onVideoSource}"
-            android:text="Start VideoSource test"
-            android:layout_height="wrap_content" />
+
 
         <Button
             android:layout_width="wrap_content"
             android:onClick="@{handler::onRecord}"
-            android:text="Start Record test"
+            android:text="@string/record_video"
             android:layout_height="wrap_content" />
 
         <Button
             android:layout_width="wrap_content"
             android:onClick="@{handler::onVideoEdit}"
-            android:text="Start Edit test"
+            android:text="@string/edit_video"
             android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
