--- a/app/src/main/res/layout/activity_record_test.xml
+++ b/app/src/main/res/layout/activity_record_test.xml
@@ -10,6 +10,7 @@
 
     <RelativeLayout
         android:id="@+id/activity_record_test"
+        android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,25 +19,46 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+
         <RelativeLayout
+            android:id="@+id/control"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="40dip"
             android:layout_alignParentBottom="true">
 
-            <Button
+            <ImageButton
                 android:id="@+id/record"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dip"
+                android:onClick="@{handler::onRecord}"
+                android:layout_height="100dip"
                 android:layout_centerInParent="true"
+                android:padding="15dp"
+                android:background="@drawable/ring_white"
+                android:src="@drawable/circle_red"
                 android:text="@string/record" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/done"
-                android:text="@string/done"
-                android:background="@android:drawable/btn_dialog"
+                android:layout_width="30dip"
+                android:layout_height="30dip"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/done"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:onClick="@{handler.onDone}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="@string/done" />
         </RelativeLayout>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="3dip"
+            android:layout_above="@+id/control"
+            android:layout_gravity="bottom"
+            android:max="1000"
+            android:progressDrawable="@drawable/progress_h" />
     </RelativeLayout>
 </layout>
