--- a/app/src/main/res/layout/activity_metadata_test.xml
+++ b/app/src/main/res/layout/activity_metadata_test.xml
@@ -14,16 +14,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/black">
-        <Button
-            android:id="@+id/select"
-            android:text="@string/select"
-            android:onClick="@{handler::onSelect}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:id="@+id/meta_data"
-            android:layout_height="wrap_content" />
+        <!--<Button-->
+            <!--android:id="@+id/select"-->
+            <!--android:text="@string/select"-->
+            <!--android:onClick="@{handler::onSelect}"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:id="@+id/meta_data"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <com.zxzx74147.mediacoredemo.widget.TextureVideoView
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="400dip" />
 
     </LinearLayout>
 </layout>
