--- a/app/src/main/res/layout/activity_record_test.xml
+++ b/app/src/main/res/layout/activity_record_test.xml
@@ -33,7 +33,7 @@
                 android:layout_height="30dip"
                 android:background="@null"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/done"
+                android:src="@drawable/ic_delete"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:onClick="@{handler::onSwitch}"
@@ -43,10 +43,10 @@
                 android:id="@+id/record"
                 android:layout_width="100dip"
                 android:onClick="@{handler::onRecord}"
+                android:background="@null"
                 android:layout_height="100dip"
                 android:layout_centerInParent="true"
                 android:padding="15dp"
-                android:background="@drawable/ring_white"
                 android:src="@drawable/circle_red"
                 android:text="@string/record" />
 
@@ -56,7 +56,7 @@
                 android:layout_height="30dip"
                 android:background="@null"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/done"
+                android:src="@drawable/ic_done"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:onClick="@{handler::onDone}"
