--- a/app/src/main/res/drawable/ring_white.xml
+++ b/app/src/main/res/drawable/ring_white.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="ring"
     android:useLevel="false"
-    android:thickness="6dp">
+    android:thickness="@dimen/default_gap_5">
 
     <solid android:color="@color/white" />
 </shape>
